--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,12 @@
     "indent": [
       2, "tab"
     ],
-    "no-tabs": 0
-  }
+    "no-tabs": 0,
+    "max-len": [
+      "error", { 
+        "code": 160 
+      }
+    ]
+  },
+  "parser": "@babel/eslint-parser"
 }
