--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "jest --coverage",
     "watch": "tsc -w"
   },
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.3",
+    "@babel/eslint-parser": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@types/jest": "^29.5.10",
     "babel-loader": "^9.1.3",
@@ -40,6 +42,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@stylistic/eslint-plugin-js": "^1.5.1",
     "core-js": "^3.33.3"
   }
 }
